# gztest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  params.json  rpcspec.json
docs/: architecture.graphml
ext/gtest/: CMakeLists.txt
include/: AbstractTestImplementation.hh  TestPlugin.hh  TestWrapper.hh  Watchers.hh  abstractgazebotestserver.h  gazebotestclient.h
include/gztest/: test_client.h  test_helpers.h
src/: .TestPlugin.cpp.swp  AbstractTestImplementation.cpp  TestPlugin.cpp  TestWrapper.cpp  gztest_helpers.cpp  test_client.cpp  test_helpers.cpp
tests/: another_test.cpp  waitfor_tests.cpp
